// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@example tests > BIN2DEC(1101) 1`] = `
"
┌───┬────┐
│   │ A  │
├───┼────┤
│ 1 │ 13 │
└───┴────┘
"
`;

exports[`@example tests > BIN2HEX(1101) 1`] = `
"
┌───┬─────┐
│   │ A   │
├───┼─────┤
│ 1 │ "d" │
└───┴─────┘
"
`;

exports[`@example tests > BIN2OCT(111111111) 1`] = `
"
┌───┬───────┐
│   │ A     │
├───┼───────┤
│ 1 │ "777" │
└───┴───────┘
"
`;

exports[`@example tests > DEC2BIN(13) 1`] = `
"
┌───┬────────┐
│   │ A      │
├───┼────────┤
│ 1 │ "1101" │
└───┴────────┘
"
`;

exports[`@example tests > DEC2HEX(13) 1`] = `
"
┌───┬─────┐
│   │ A   │
├───┼─────┤
│ 1 │ "d" │
└───┴─────┘
"
`;

exports[`@example tests > DEC2OCT(13) 1`] = `
"
┌───┬──────┐
│   │ A    │
├───┼──────┤
│ 1 │ "15" │
└───┴──────┘
"
`;

exports[`@example tests > HEX2BIN > HEX2BIN("1234") 1`] = `
"
┌───┬─────────────────┐
│   │ A               │
├───┼─────────────────┤
│ 1 │ "1001000110100" │
└───┴─────────────────┘
"
`;

exports[`@example tests > HEX2BIN > HEX2BIN("FF") 1`] = `
"
┌───┬────────────┐
│   │ A          │
├───┼────────────┤
│ 1 │ "11111111" │
└───┴────────────┘
"
`;

exports[`@example tests > HEX2DEC > HEX2DEC("1234") 1`] = `
"
┌───┬──────┐
│   │ A    │
├───┼──────┤
│ 1 │ 4660 │
└───┴──────┘
"
`;

exports[`@example tests > HEX2DEC > HEX2DEC("FF") 1`] = `
"
┌───┬─────┐
│   │ A   │
├───┼─────┤
│ 1 │ 255 │
└───┴─────┘
"
`;

exports[`@example tests > HEX2OCT > HEX2OCT("1234") 1`] = `
"
┌───┬─────────┐
│   │ A       │
├───┼─────────┤
│ 1 │ "11064" │
└───┴─────────┘
"
`;

exports[`@example tests > HEX2OCT > HEX2OCT("FF") 1`] = `
"
┌───┬───────┐
│   │ A     │
├───┼───────┤
│ 1 │ "377" │
└───┴───────┘
"
`;

exports[`@example tests > OCT2BIN(777) 1`] = `
"
┌───┬─────────────┐
│   │ A           │
├───┼─────────────┤
│ 1 │ "111111111" │
└───┴─────────────┘
"
`;

exports[`@example tests > OCT2DEC(777) 1`] = `
"
┌───┬─────┐
│   │ A   │
├───┼─────┤
│ 1 │ 511 │
└───┴─────┘
"
`;

exports[`@example tests > OCT2HEX(777) 1`] = `
"
┌───┬───────┐
│   │ A     │
├───┼───────┤
│ 1 │ "1ff" │
└───┴───────┘
"
`;
